# archean-editor

./: .gitignore  Cargo.toml
.cargo/: config.toml
.zed/: settings.json
assets/: slope.mtl
src/: action.rs  blueprint.rs  lib.rs  main.rs
