[package]
name = "archean-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-vec = "0.8.0"
bevy = { version = "0.18.0", features = [
  "3d",
  "dynamic_linking",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_obj = "0.18.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
