[package]
name = "archean-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_common_assets = { version = "0.15.0", features = ["json"] }
bevy_obj = "0.18.2"
serde = { version = "1", features = ["derive"] }

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = ["3d", "debug", "dynamic_linking", "file_watcher"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
